fixed bibtex entry

--- a/research.html
+++ b/research.html
@@ -68,8 +68,22 @@
 			max-width: 100%;
 			height: auto;
 		}
+
 		h2 {
-			text-align: center; /* Centered "Research" text */
+		  text-align: center;
+		  position: relative;
+		}
+
+		h2::after {
+		  content: '';
+		  display: block;
+		  position: absolute;
+		  bottom: 0;
+		  left: 50%;
+		  width: 100%;
+		  transform: translateX(-50%);
+		  height: 1px;
+		  background-color: #333; 
 		}
 
 		paper_title {
@@ -173,7 +187,7 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li class="active"><a href="research.html"><b>Research & Publications</b></a></li>
+					<li class="active"><a href="research.html"><b>Research</b></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -181,11 +195,12 @@
 		<hr style="border: none; border-top: 1px solid #333; margin: 0;">
 
 		<main>
-			<h2>Research & Publications</h2> <!-- Centered "Research & Publications" text with Roboto font -->
+			<h2>Research</h2> <!-- Centered "Research" text with Roboto font -->
 			<div class="content">
 				<!-- Add your research content here -->
 				<!-- Add any research-related images here -->
 				<img src="images/research-banner.png" alt="Research Banner" style="width: 100%;">
+				<h2>Publications</h2>
 
 <h3 style="text-align: left;">2024</h3>
         <ul>
@@ -205,78 +220,6 @@
                 <paper_authors>Chen, Rongsen and Zhao, Junhong and Zhang, Fang-Lue and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>International Conference on Computational Visual Media, 2024</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chen2024neural.pdf', '_blank')">PDF 43MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chen2024neural-compressed.pdf', '_blank')">PDF 5MB</button>
-            </div>
-          </li>
-        </ul>
-
-<h3 style="text-align: left;">2023</h3>
-        <ul>
-          <li>
-            <img src="./thumbnails/rhee2023real-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>Real-Time Stage Modelling and Visual Effects for Live Performances</paper_title><br>
-                <paper_authors>Rhee, Taehyun and <b>Chalmers, Andrew</b> and Zaman, Faisal and Stangnes, Anna and Roberts, Vic</paper_authors><br>
-                <paper_publisher>ACM SIGGRAPH Real-Time Live!, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/rhee2023real.pdf', '_blank')">PDF 4MB</button>                <button class="button-main" onclick="window.open('https://dl.acm.org/doi/10.1145/3588430.3597245', '_blank')">DOI</button>
-                <button class="button-main" onclick="window.open('https://s2023.siggraph.org/presentation/?id=real_106&sess=sess258', '_blank')">Event Page</button>
-                <button class="button-video" onclick="window.open('https://youtu.be/OvC_Wwo6LXU?feature=shared', '_blank')">Video</button>
-                <button class="button-award"">Audience Choice Award</button>
-            </div>
-          </li>
-          <li>
-            <img src="./thumbnails/chalmers2023real-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>Real-Time Auditorium Modeling and Visual Effects for Live Performances</paper_title><br>
-                <paper_authors><b>Chalmers, Andrew</b> and Zaman, Faisal and Stangnes, Anna and Finnie, Simon and Nguyen, Hong Son and Han, JungHyun and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>ACM SIGGRAPH Asia Real-Time Live!, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/chalmers2023real.pdf', '_blank')">PDF 1MB</button>                <button class="button-main" onclick="window.open('https://dl.acm.org/doi/10.1145/3610539.3630250', '_blank')">DOI</button>
-                <button class="button-main" onclick="window.open('https://asia.siggraph.org/2023/presentation/?id=real_110&sess=sess210', '_blank')">Event Page</button>
-                <button class="button-video" onclick="window.open('https://youtu.be/lcLjtdlc-7k?feature=shared', '_blank')">Video</button>
-            </div>
-          </li>
-          <li>
-            <img src="./thumbnails/chalmers2023motion-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>A Motion-Simulation Platform to Generate Synthetic Motion Data for Computer Vision Tasks</paper_title><br>
-                <paper_authors><b>Chalmers, Andrew</b> and Zhao, Junhong and Khuan Hoh, Weng and Drown, James and Finnie, Simon and Yao, Richard and Lin, James and Wilmott, James and Dey, Arindam and Billinghurst, Mark and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>SIGGRAPH Asia Technical Communications, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/chalmers2023motion.pdf', '_blank')">PDF 5MB</button>            </div>
-          </li>
-          <li>
-            <img src="./thumbnails/zaman2023mrmac-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>MRMAC: Mixed Reality Multi-User Asymmetric Collaboration</paper_title><br>
-                <paper_authors>Zaman, Faisal and Anslow, Craig and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>IEEE International Symposium on Mixed and Augmented Reality, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/zaman2023mrmac.pdf', '_blank')">PDF 8MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/zaman2023mrmac-compressed.pdf', '_blank')">PDF 2MB</button>
-            </div>
-          </li>
-          <li>
-            <img src="./thumbnails/zhao2023deep-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>Deep Learning-Based Simulator Sickness Estimation from 3D Motion</paper_title><br>
-                <paper_authors>Zhao, Junhong and Tran, Kien TP and <b>Chalmers, Andrew</b> and Hoh, Weng Khuan and Yao, Richard and Dey, Arindam and Wilmott, James and Lin, James and Billinghurst, Mark and Lindeman, Robert W and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>IEEE International Symposium on Mixed and Augmented Reality, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/zhao2023deep.pdf', '_blank')">PDF 15MB</button>                <button class="button-main" onclick="window.open('./papers/zhao2023deep-appendix.pdf', '_blank')">Appendix 7MB</button>
-            </div>
-          </li>
-          <li>
-            <img src="./thumbnails/o2023simulating-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>Simulating the Geometric Growth of the Marine Sponge Crella Incrustans</paper_title><br>
-                <paper_authors>O’Hagan, Joshua and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>IEEE Visualization and Visual Analytics, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/o2023simulating.pdf', '_blank')">PDF 9MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/o2023simulating-compressed.pdf', '_blank')">PDF 2MB</button>
-                <button class="button-main" onclick="window.open('./papers/o2023simulating-appendix.pdf', '_blank')">Appendix 9MB</button>
-            </div>
-          </li>
-          <li>
-            <img src="./thumbnails/weir2023lighting-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>De-Lighting Human Images using Region-Specific Data Augmentation</paper_title><br>
-                <paper_authors>Weir, Joshua and Zhao, Junhong and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>38th International Conference on Image and Vision Computing New Zealand, 2023</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/weir2023lighting.pdf', '_blank')">PDF 15MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/weir2023lighting-compressed.pdf', '_blank')">PDF 3MB</button>
             </div>
           </li>
         </ul>
@@ -331,18 +274,9 @@
             <img src="./thumbnails/suppan2021neural-thumbnail.jpg" alt="Thumbnail">
             <div class="item-text">
                 <paper_title>Neural Screen Space Rendering of Direct Illumination</paper_title><br>
-                <paper_authors>Suppan, Christian and <b>Chalmers, Andrew</b> and Zhao, Junhong and Doronin, Alex and Rhee, Taehyun and Lee, SH and Zollmann, S and Okabe, M and Wu</paper_authors><br>
+                <paper_authors>Suppan, Christian and <b>Chalmers, Andrew</b> and Zhao, Junhong and Doronin, Alex and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>Pacific Graphics, 2021</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/suppan2021neural.pdf', '_blank')">PDF 5MB</button>                <button class="button-award"">Best Conference Paper Award</button>
-            </div>
-          </li>
-          <li>
-            <img src="./thumbnails/petikam2021art-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>Art-Directing Appearance using an Environment Map Latent Space</paper_title><br>
-                <paper_authors>Petikam, Lohit and <b>Chalmers, Andrew</b> and Anjyo, Ken and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>Pacific Graphics, 2021</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/petikam2021art.pdf', '_blank')">PDF 20MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/petikam2021art-compressed.pdf', '_blank')">PDF 3MB</button>
             </div>
           </li>
           <li>
@@ -393,14 +327,6 @@
                 <button class="button-main" onclick="window.open('./papers/chalmers2020reconstructing.pdf', '_blank')">PDF 19MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2020reconstructing-compressed.pdf', '_blank')">PDF 2MB</button>
                 <button class="button-main" onclick="window.open('./papers/chalmers2020reconstructing-appendix.pdf', '_blank')">Appendix 1MB</button>
             </div>
-          </li>
-          <li>
-            <img src="./thumbnails/chalmers2020shadow-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>Shadow-Based Light Detection for HDR Environment Maps</paper_title><br>
-                <paper_authors><b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>35th International Conference on Image and Vision Computing New Zealand, 2020</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/chalmers2020shadow.pdf', '_blank')">PDF 1MB</button>            </div>
           </li>
           <li>
             <img src="./thumbnails/chalmers2020illumination-thumbnail.jpg" alt="Thumbnail">
@@ -457,14 +383,6 @@
             </div>
           </li>
           <li>
-            <img src="./thumbnails/rhee2018mixed-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>Mixed Reality 360 Live: Live Blending of Virtual Objects Into 360° Streamed Video</paper_title><br>
-                <paper_authors>Rhee, Taehyun and <b>Chalmers, Andrew</b> and Loh, Ian and Allen, Ben and Petikam, Lohit and Thompson, Stephen and Revill, Tom</paper_authors><br>
-                <paper_publisher>ACM SIGGRAPH Real-Time Live!, 2018</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/rhee2018mixed.pdf', '_blank')">PDF 1MB</button>            </div>
-          </li>
-          <li>
             <img src="./thumbnails/rhee2018mr360-thumbnail.jpg" alt="Thumbnail">
             <div class="item-text">
                 <paper_title>MR360 Interactive: Playing With Digital Creatures in 360 Videos</paper_title><br>
@@ -473,14 +391,6 @@
                 <button class="button-main" onclick="window.open('./papers/rhee2018mr360.pdf', '_blank')">PDF 4MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/rhee2018mr360-compressed.pdf', '_blank')">PDF 2MB</button>
                 <button class="button-award"">Second Place Award</button>
             </div>
-          </li>
-          <li>
-            <img src="./thumbnails/dean2018magic-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>A Magic Wand for Motion Capture Editing and Edit Propagation</paper_title><br>
-                <paper_authors>Dean, Christopher J and Lewis, JP and <b>Chalmers, Andrew</b></paper_authors><br>
-                <paper_publisher>SIGGRAPH Asia Technical Briefs, 2018</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/dean2018magic.pdf', '_blank')">PDF 2MB</button>            </div>
           </li>
           <li>
             <img src="./thumbnails/chalmers2018illumination-thumbnail.jpg" alt="Thumbnail">
@@ -546,18 +456,6 @@
                 <paper_publisher>Pacific Graphics, 2014</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2014sky.pdf', '_blank')">PDF 9MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2014sky-compressed.pdf', '_blank')">PDF 2MB</button>
             </div>
-          </li>
-        </ul>
-
-<h3 style="text-align: left;">2013</h3>
-        <ul>
-          <li>
-            <img src="./thumbnails/chalmers2013perceptually-thumbnail.jpg" alt="Thumbnail">
-            <div class="item-text">
-                <paper_title>Perceptually Based Radiance Map for Realistic Composition</paper_title><br>
-                <paper_authors><b>Chalmers, Andrew</b> and Choi, Jong Jin and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>28th International Conference on Image and Vision Computing New Zealand, 2013</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/chalmers2013perceptually.pdf', '_blank')">PDF 3MB</button>            </div>
           </li>
         </ul>
 
