--- a/research.html
+++ b/research.html
@@ -220,6 +220,7 @@
                 <paper_authors>Chen, Rongsen and Zhao, Junhong and Zhang, Fang-Lue and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>International Conference on Computational Visual Media, 2024</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chen2024neural.pdf', '_blank')">PDF 43MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chen2024neural-compressed.pdf', '_blank')">PDF 5MB</button>
+                <button class="button-main" onclick="window.open('./papers/chen2024neural-poster.pdf', '_blank')">Poster</button>
             </div>
           </li>
         </ul>
