--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
         <main>
             <div class="content">
                 <div class="text">
-                    <p>I'm a researcher at <a href="https://www.wgtn.ac.nz/cmic" target="_blank">Victoria University of Wellington's Computational Media Innovation Centre (CMIC)</a>. My research areas are related to computer graphics, computer vision, and deep learning. This includes lighting, material models, light & material estimation, and virtual/augmented/mixed reality.</p>
+                    <p>I'm a Lecturer in Software Engineering at Victoria University of Wellington in the <a href="https://ecs.wgtn.ac.nz/" target="_blank">School of Engineering and Computer Science</a>.</p>
+
+                    <p>My research areas are related to computer graphics, computer vision, machine learning, extended reality (AR/MR/VR), and telepresence/telecollaboration. I was previously a researcher at University of Melbourne in the <a href="https://cis.unimelb.edu.au/" target="_blank">School of Computing and Information Systems</a>, and a researcher at Victoria University of Wellington in the <a href="https://www.wgtn.ac.nz/cmic" target="_blank">Computational Media Innovation Centre (CMIC)</a>.</p>
 
                     <p>I also did my studies at Victoria University of Wellington. This included my PhD in Computer Graphics, an honors degree in Computer Graphics, and an undergraduate double degree, majoring in Computer Science and Philosophy.</p>
 
-                    <p>Skills include: Python, C/C++, Java, C#, Javascript, Android development, OpenGL API, Unity3D & Unreal Engine, Maya (modeling & API), and lecturing/tutoring.</p>
+                    <p>Skills include: Python, C/C++, Java, C#, Javascript, Android development, OpenGL API, Unity3D & Unreal Engine, Maya (API & interface), and lecturing/tutoring.</p>
 
                     <p>Personal interests include playing video games, listening to music, and playing sports.</p>
 
