accv publication added

--- a/research.html
+++ b/research.html
@@ -223,6 +223,15 @@
                 <button class="button-main" onclick="window.open('./papers/chen2024neural-poster.pdf', '_blank')">Poster</button>
             </div>
           </li>
+          <li>
+            <img src="./thumbnails/weir2024full-thumbnail.jpg" alt="Thumbnail">
+            <div class="item-text">
+                <paper_title>Full-Body Human De-Lighting With Semi-Supervised Learning</paper_title><br>
+                <paper_authors>Weir, Joshua and Zhao, Junhong and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
+                <paper_publisher>Proceedings of the Asian Conference on Computer Vision, 2024</paper_publisher><br>
+                <button class="button-main" onclick="window.open('./papers/weir2024full.pdf', '_blank')">PDF 28MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/weir2024full-compressed.pdf', '_blank')">PDF 3MB</button>
+            </div>
+          </li>
         </ul>
 
 <h3 style="text-align: left;">2023</h3>
