added accv and slides support

--- a/research.html
+++ b/research.html
@@ -209,7 +209,7 @@
             <div class="item-text">
                 <paper_title>Avatar360: Emulating 6-Dof Perception in 360° Panoramas through Avatar-Assisted Navigation</paper_title><br>
                 <paper_authors><b>Chalmers, Andrew</b> and Zaman, Faisal and Rhee, Taehyun</paper_authors><br>
-                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces, 2024</paper_publisher><br>
+                <paper_publisher>IEEE Conference Virtual Reality and 3D User Interfaces, 2024</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2024avatar360.pdf', '_blank')">PDF 27MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/chalmers2024avatar360-compressed.pdf', '_blank')">PDF 2MB</button>
             </div>
           </li>
@@ -229,7 +229,9 @@
                 <paper_title>Full-Body Human De-Lighting With Semi-Supervised Learning</paper_title><br>
                 <paper_authors>Weir, Joshua and Zhao, Junhong and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>Proceedings of the Asian Conference on Computer Vision, 2024</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/weir2024full.pdf', '_blank')">PDF 28MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/weir2024full-compressed.pdf', '_blank')">PDF 3MB</button>
+                <button class="button-main" onclick="window.open('./papers/weir2024full.pdf', '_blank')">PDF 9MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/weir2024full-compressed.pdf', '_blank')">PDF 5MB</button>
+                <button class="button-main" onclick="window.open('./papers/weir2024full-poster.pdf', '_blank')">Poster</button>
+                <button class="button-main" onclick="window.open('./slides/weir2024full.pptx', '_blank')">Slides</button>
             </div>
           </li>
         </ul>
@@ -270,7 +272,7 @@
           <li>
             <img src="./thumbnails/zaman2023mrmac-thumbnail.jpg" alt="Thumbnail">
             <div class="item-text">
-                <paper_title>MRMAC: Mixed Reality Multi-User Asymmetric Collaboration</paper_title><br>
+                <paper_title>Mrmac: Mixed Reality Multi-User Asymmetric Collaboration</paper_title><br>
                 <paper_authors>Zaman, Faisal and Anslow, Craig and <b>Chalmers, Andrew</b> and Rhee, Taehyun</paper_authors><br>
                 <paper_publisher>IEEE International Symposium on Mixed and Augmented Reality, 2023</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/zaman2023mrmac.pdf', '_blank')">PDF 8MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/zaman2023mrmac-compressed.pdf', '_blank')">PDF 2MB</button>
@@ -484,7 +486,7 @@
           <li>
             <img src="./thumbnails/rhee2018mixed-thumbnail.jpg" alt="Thumbnail">
             <div class="item-text">
-                <paper_title>Mixed Reality 360 Live: Live Blending of Virtual Objects Into 360° Streamed Video</paper_title><br>
+                <paper_title>Mixed Reality 360 Live: Live Blending of Virtual Objects Into 360 Streamed Video</paper_title><br>
                 <paper_authors>Rhee, Taehyun and <b>Chalmers, Andrew</b> and Loh, Ian and Allen, Ben and Petikam, Lohit and Thompson, Stephen and Revill, Tom</paper_authors><br>
                 <paper_publisher>ACM SIGGRAPH Real-Time Live!, 2018</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/rhee2018mixed.pdf', '_blank')">PDF 1MB</button>            </div>
@@ -584,6 +586,10 @@
                 <paper_publisher>28th International Conference on Image and Vision Computing New Zealand, 2013</paper_publisher><br>
                 <button class="button-main" onclick="window.open('./papers/chalmers2013perceptually.pdf', '_blank')">PDF 3MB</button>            </div>
           </li>
+        </ul>
+
+<h3 style="text-align: left;">Unknown</h3>
+        <ul>
         </ul>
 
 			</main>
