--- a/research.html
+++ b/research.html
@@ -200,6 +200,19 @@
 				<img src="images/research-banner.png" alt="Research Banner" style="width: 100%;">
 				<h2>Publications</h2>
 
+<h3 style="text-align: left;">2025</h3>
+        <ul>
+          <li>
+            <img src="./thumbnails/nguyen2025full-thumbnail.jpg" alt="Thumbnail">
+            <div class="item-text">
+                <paper_title>Full-Body Interaction in Mixed Reality using 3D Pose and Shape Estimation</paper_title><br>
+                <paper_authors>Nguyen, Hong Son and <b>Chalmers, Andrew</b> and Cheong, DaEun and Kim, Myoung Gon and Rhee, Taehyun and Han, JungHyun</paper_authors><br>
+                <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces, 2025</paper_publisher><br>
+                <button class="button-main" onclick="window.open('./papers/nguyen2025full.pdf', '_blank')">PDF 1MB</button>                <button class="button-other" onclick="window.open('./papers/nguyen2025full-poster.pdf', '_blank')">Poster</button>
+            </div>
+          </li>
+        </ul>
+
 <h3 style="text-align: left;">2024</h3>
         <ul>
           <li>
