pose poster thumb updated

--- a/research.html
+++ b/research.html
@@ -208,7 +208,8 @@
                 <paper_title>Full-Body Interaction in Mixed Reality using 3D Pose and Shape Estimation</paper_title><br>
                 <paper_authors>Nguyen, Hong Son and <b>Chalmers, Andrew</b> and Cheong, DaEun and Kim, Myoung Gon and Rhee, Taehyun and Han, JungHyun</paper_authors><br>
                 <paper_publisher>IEEE Conference on Virtual Reality and 3D User Interfaces, 2025</paper_publisher><br>
-                <button class="button-main" onclick="window.open('./papers/nguyen2025full.pdf', '_blank')">PDF 1MB</button>                <button class="button-other" onclick="window.open('./papers/nguyen2025full-poster.pdf', '_blank')">Poster</button>
+                <button class="button-main" onclick="window.open('./papers/nguyen2025full.pdf', '_blank')">PDF 2MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/nguyen2025full-compressed.pdf', '_blank')">PDF 2MB</button>
+                <button class="button-other" onclick="window.open('./papers/nguyen2025full-poster.pdf', '_blank')">Poster</button>
             </div>
           </li>
         </ul>
