added paper casa 2025

--- a/research.html
+++ b/research.html
@@ -212,6 +212,15 @@
                 <button class="button-other" onclick="window.open('./papers/nguyen2025full-poster.pdf', '_blank')">Poster</button>
             </div>
           </li>
+          <li>
+            <img src="./thumbnails/nguyen2025interaction-thumbnail.jpg" alt="Thumbnail">
+            <div class="item-text">
+                <paper_title>Interaction With Virtual Objects using Human Pose and Shape Estimation</paper_title><br>
+                <paper_authors>Nguyen, Hong Son and Cheong, DaEun and <b>Chalmers, Andrew</b> and Kim, Myoung Gon and Rhee, Taehyun and Han, JungHyun</paper_authors><br>
+                <paper_publisher>38th International Computer Animation Social Agents, 2025</paper_publisher><br>
+                <button class="button-main" onclick="window.open('./papers/nguyen2025interaction.pdf', '_blank')">PDF 10MB</button>                <button class="button-main" onclick="window.open('./papers-compressed/nguyen2025interaction-compressed.pdf', '_blank')">PDF 4MB</button>
+            </div>
+          </li>
         </ul>
 
 <h3 style="text-align: left;">2024</h3>
